:lipstick:fixed body overflow

--- a/regim/style.css
+++ b/regim/style.css
@@ -38,6 +38,8 @@ body{
     --wrapper-width : 90%;
     --wrapper-max-width : 650px;
 
+    overflow-x:hidden;
+
 }
 
 a,a::visited,a::active{
